# faith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/: ADR-001-nvi-substitution.md  AWESOME-PRS.md  REFERENCES.md  SCHEMA.md  SPEC.md
scripts/: book_names.json  demo.sh  generate_multilang_books.py
src/: books.rs  citation.rs  error.rs  installer.rs  lib.rs  main.rs  reference.rs  schema.rs  store.rs  translations.rs
src/cli/: batch.rs  cache.rs  completions.rs  config.rs  diff.rs  get.rs  info.rs  install.rs  list.rs  manifest.rs  mod.rs  random.rs  search.rs  stats.rs  tabular.rs
tests/: cli_snapshots.rs  reference_golden.rs
tests/snapshots/: cli_snapshots__batch_preserves_order_snapshot.snap  cli_snapshots__diff_single_verse_two_translations_snapshot.snap  cli_snapshots__get_chapter_only_snapshot.snap  cli_snapshots__get_cross_chapter_range_snapshot.snap  cli_snapshots__get_multi_translation_snapshot.snap  cli_snapshots__get_single_verse_kjv_json_snapshot.snap  cli_snapshots__get_text_format_snapshot.snap  cli_snapshots__get_verse_range_same_chapter_snapshot.snap  cli_snapshots__info_book_no_translation_snapshot.snap  cli_snapshots__info_book_with_translation_snapshot.snap  cli_snapshots__list_books_snapshot.snap  cli_snapshots__list_translations_snapshot.snap  cli_snapshots__manifest_snapshot.snap  cli_snapshots__random_deterministic_with_seed_snapshot.snap
