[package]
name = "faith"
version = "0.1.1-alpha.0"
edition = "2021"
rust-version = "1.83"
authors = ["Victor Gutierrez <victorgutierrezgomes@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Agent-first Bible CLI. Multi-locale, deterministic, offline. Returns canonical JSON, supports batch and multi-translation parallel lookups."
repository = "https://github.com/V-Gutierrez/faith"
homepage = "https://github.com/V-Gutierrez/faith"
documentation = "https://docs.rs/faith"
readme = "README.md"
keywords = ["bible", "cli", "agent", "scripture", "mcp"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "faith"
path = "src/main.rs"

[lib]
name = "faith"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "5"
ureq = { version = "2", features = ["json"] }
regex = "1"
unicode-normalization = "0.1"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
